# homedigger-mailman

./: pyproject.toml
hdmailman/: __init__.py  utils.py
hdmailman/brokers/: rabbit.py  registry.py
hdmailman/exceptions/: __init__.py
tests/broker/: test_broker.py
tests/fixtures/: environment_fixtures.py
