[tool.poetry]
name = "hdmailman"
version = "1.0.0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.7"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
coverage = "^7.4.0"


[tool.black]
line_length = 80
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
exclude = 'tests'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
